# cli

./: .gitignore  AGENT.md  README.md  auth.py  awfl_entry.py  commands.py  consume_autofunds.py  consume_cli_operations.py  main.py  pyproject.toml  state.py
.github/workflows/: python-publish.yml
awfl.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
cmds/: workflows.py
cmds/dev/: README.md  commands.py  dev_config.py  docker_utils.py  paths.py  prompt_utils.py
cmds/dev/subcommands/: start.py  stop.py
consumer/: debug.py  routing.py
docs/: DEMO.md
events/: workspace.py
recordings/: awfl-quickstart.cast
response_handler/: __init__.py  callbacks.py  event_logger.py  handler.py  session_state.py
scripts/: record_demo.sh
src/awfl/: AGENT.md  auth.py  main.py
src/awfl/cmds/: auth_cmds.py  config_cmds.py  deploy_cmds.py  exec_ctl.py  files_cmds.py  model_cmds.py  router.py  workflows.py
src/awfl/cmds/dev/: AGENT.md  README.md  commands.py  core.py  dev_config.py  dev_state.py  ngrok_utils.py  paths.py  scripts_watcher.py  watcher.py  yaml_ops.py
src/awfl/cmds/dev/subcommands/: deploy.py  generate.py  logs.py  start.py  status.py  stop.py
src/awfl/consumer/: cursors.py  debug.py  leader_lock.py  sse_consumer.py  sse_parser.py
src/awfl/events/: workspace.py
src/awfl/response_handler/: callbacks.py  event_logger.py  handler.py
src/awfl/response_handler/tests/: test_sanitize.py
src/awfl/utils/: __init__.py  logging.py  urls.py  workflows.py
tints/: README.md  app.js  index.html  styles.css
utils/: __init__.py
